# kafkahouse

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  REFACTOR.md  benchmark_kafka_consumer.sh  benchmark_kafka_producer.sh  benchmark_produce.sh  consume.sh  consume_group.sh  debug_consume.sh  down_clickhouse_cluster.sh  produce.sh  setup_kafka_tools.sh  start_clickhouse_cluster.sh  test_consume.sh  test_produce.sh
benches/: storage_benchmark.rs
clickhouse-compose/: docker-compose.yaml
clickhouse-compose/fs/volumes/clickhouse-01/etc/clickhouse-server/config.d/: config.xml
clickhouse-compose/fs/volumes/clickhouse-02/etc/clickhouse-server/config.d/: config.xml
clickhouse-compose/schemas/: 00_init_database.sql  01_consumer_offsets.sql  01_partition_mapping.sql  02_group_members.sql  03_kafka_messages.sql  04_init_mappings.sql
src/: lib.rs  main.rs
src/handler/: mod.rs
src/kafka/: client.rs  client_actor.rs  client_types.rs  consumer_group.rs  consumer_groups_actor.rs  mod.rs  protocol.rs
src/kafka/broker/: broker.rs  mod.rs  types.rs
src/kafka/client/: actor.rs  mod.rs  types.rs
src/kafka/client/handlers/: api_versions.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  join_group.rs  leave_group.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs
src/kafka/client_handlers/: api_versions.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  join_group.rs  leave_group.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs
src/kafka/consumer/: actor.rs  group.rs  mod.rs
src/network/: mod.rs
src/protocol/: mod.rs
src/storage/: mod.rs  offsets_actor.rs
