[package]
name = "kafkahouse"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
kafka-protocol = "0.14.1"
uuid = { version = "1.3", features = ["v4"] }
clickhouse = "0.13.1"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper = { version = "1.1", features = ["client", "http1"] }
