[package]
name = "kafka_ch"
version = "0.1.0"
edition = "2024"

[dependencies]
kafka-protocol = { version = "0.14", features = ["messages_enums", "broker"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.5"
tokio-stream = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.13", features = ["chrono"] }
indexmap = "2.7"
dashmap = "6.1"
ractor = "0.15"
